--- a/to do list app/Base.lproj/Main.storyboard
+++ b/to do list app/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
             <objects>
                 <tableViewController id="Ui0-Kw-tUE" customClass="ToDoTableTableViewController" customModule="to_do_list_app" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="TUW-cR-F4G">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
@@ -67,7 +67,7 @@
             <objects>
                 <viewController id="Hjn-AM-vt0" customClass="AddToDoViewController" customModule="to_do_list_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="naG-fP-TYJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xv3-D8-jL8">
@@ -83,20 +83,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s50-qA-2A8">
-                                <rect key="frame" x="332" y="95" width="79" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Add a to do"/>
-                                <connections>
-                                    <action selector="addTapped:" destination="Hjn-AM-vt0" eventType="touchUpInside" id="zjy-K5-BuM"/>
-                                </connections>
-                            </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="fwi-bZ-BGc">
                                 <rect key="frame" x="169" y="343" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="importantSwitch:" destination="Hjn-AM-vt0" eventType="valueChanged" id="1gs-ri-45L"/>
-                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Important" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFx-X4-qlF">
                                 <rect key="frame" x="155" y="263" width="75" height="21"/>
@@ -105,6 +94,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s50-qA-2A8">
+                                <rect key="frame" x="285" y="95" width="79" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add a to do"/>
+                                <connections>
+                                    <action selector="addTapped:" destination="Hjn-AM-vt0" eventType="touchUpInside" id="zjy-K5-BuM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="Taa-Ul-yqN"/>
@@ -112,7 +109,6 @@
                     <navigationItem key="navigationItem" id="aaR-xb-W4N"/>
                     <connections>
                         <outlet property="importantSwitch" destination="fwi-bZ-BGc" id="3Dc-cu-KTl"/>
-                        <outlet property="titelTextField" destination="gcJ-Ld-W8Z" id="R20-sk-VMi"/>
                         <outlet property="titleTextField" destination="gcJ-Ld-W8Z" id="9Gx-h0-7fX"/>
                     </connections>
                 </viewController>
@@ -158,7 +154,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="yDE-Jq-D2w"/>
+        <segue reference="97E-Zf-q4z"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="plus" catalog="system" width="128" height="113"/>
